--- a/Nodes/DataStores/DataStores.yaml
+++ b/Nodes/DataStores/DataStores.yaml
@@ -34,6 +34,10 @@ Children:
           Type: StoreColumn
           DataType: DateTime
           Value: "1601-01-01T00:00:00.0000000"
+        - Name: VarIncrement
+          Type: StoreColumn
+          DataType: Int32
+          Value: 0
   - Class: Reference
     Target: ns=17;i=30
     Direction: Forward
